--- a/package.json
+++ b/package.json
@@ -10,23 +10,12 @@
   "keywords": [],
   "description": "",
   "dependencies": {
-    "babel-plugin-transform-async-to-generator": "6.8.0",
-    "babel-register": "6.14.0",
     "chalk": "1.1.3",
     "execa": "0.4.0",
     "hard-rejection": "0.1.0",
-    "lodash": "4.15.0",
-    "shelljs": "0.7.4"
+    "lodash": "4.15.0"
   },
   "devDependencies": {
     "svgo": "0.7.0"
-  },
-  "babel": {
-    "plugins": [
-      "transform-async-to-generator"
-    ]
-  },
-  "standard": {
-    "parser": "babel-eslint"
   }
 }
