--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "autoprefixer": "6.4.1",
     "babel-plugin-transform-async-to-generator": "6.8.0",
     "babel-register": "6.14.0",
     "chalk": "1.1.3",
+    "clean-css": "3.4.19",
     "execa": "0.4.0",
+    "fs-promise": "0.5.0",
+    "glob-stream": "5.3.5",
     "hard-rejection": "0.1.0",
     "lodash": "4.15.0",
+    "node-glob": "1.2.0",
+    "postcss": "5.2.0",
+    "postcss-cli": "2.6.0",
+    "postcss-import": "8.1.2",
     "shelljs": "0.7.4"
   },
   "devDependencies": {
